// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $1.95
  </p>
</div>
`;

exports[`should render ExpensesSummary with two expenses correctly 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $1,096.95
  </p>
</div>
`;
